--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ flake8-docstrings==1.7.0
 pep8-naming==0.14.1
 pytest==8.3.4
 pytest-django==4.9.0
-pytest-lazy-fixtures==1.1.1
+pytest-lazy-fixture==0.6.3
 pytest-subtests==0.13.1
 pytils==0.4.1
